--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     // It center the positioning point to the center of the ball
     ball.style.top  = (maxX*x/180 - 10) + "px";
     ball.style.left = (maxY*y/180 - 10) + "px";
-    // oscillators.forEach((osc, i) => {
-    //   osc.frequency.rampTo(maxY*y/180 - 10);
-    // });
+    oscillators.forEach((osc, i) => {
+      osc.frequency.rampTo(maxY*y/180 - 10);
+    });
 
   }
 
