Messages are sending from client

--- a/index.html
+++ b/index.html
@@ -95,18 +95,14 @@
   function sendInput(){
 
     let xhr = new XMLHttpRequest();
-    xhr.open('POST', '/input');
-    xhr.setRequestHeader('Content-Type', 'application/json');
+    xhr.open('POST', '/input', true);
+    xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
     xhr.onload = function() {
         if (xhr.status === 200) {
             let info  = JSON.parse(xhr.responseText);
         }
     };
-    xhr.send(JSON.stringify({
-        x: 'Hello',
-        b: "something",
-        c: "else"
-    }));
+    xhr.send("x=Hello");
 
     console.log("Sent request");
   }
