--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <style type="text/css">
   .garden {
-    position: relative;
-    width : 200px;
-    height: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -300px;
+    margin-left: -300px;
+    width: 600px;
+    height: 600px;
     border: 5px solid #CCC;
     border-radius: 10px;
   }
 
+
   .ball {
     position: absolute;
-    top   : 90px;
-    left  : 90px;
-    width : 20px;
-    height: 20px;
+    top   : 270px;
+    left  : 270px;
+    width : 60px;
+    height: 60px;
     background: green;
     border-radius: 100%;
   }
