--- a/instrument.html
+++ b/instrument.html
@@ -36,7 +36,7 @@
   function getInput(data){
 
     let xhr = new XMLHttpRequest();
-    xhr.open('GET', '/output', true);
+    xhr.open('GET', 'https://muzak-synchrony.herokuapp.com/output', true);
     xhr.onload = function() {
         if (xhr.status === 200) {
             let info  = JSON.parse(xhr.responseText);
