--- a/instrument.html
+++ b/instrument.html
@@ -51,6 +51,7 @@
               oscillators.forEach((osc, i) => {
                 osc.frequency.rampTo(avg);
               })
+              inputs = [];
             }
         }
     };
