Adding more inputs, fixes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         }
     };
 
-    xhr.send("x=" + data.toString);
+    xhr.send("x=" + data.toString());
 
     console.log("Sent request");
   }
