Ready for demo?

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <div class="garden">
     <div class="ball"></div>
+    <button id="btn">click me please work uwu</button>
 </div>
 
 <pre class="output"></pre>
